<resources>
    <string name="app_name">PrinFood</string>
    <string name="dining_room">Dining Room</string>
    <string name="pub">Pub</string>
    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="times">Times</string>
    <string name="facebook_app_id">810100945766387</string>
    <string name="check_in">Check In</string>
    <string name="check_in_dining">Check in Dining</string>
    <string name="check_in_pub">Check in Pub</string>
    <string name="couldnt_find_time">Couldn\'t Find Times</string>
    <string name="login_cancel">Login Attempt Canceled</string>
    <string name="login_error">Login attempt failed.</string>
</resources>
