<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.ngflanders.android.prinfoods.HomeActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:weightSum="2"
        android:layout_weight="10"
        android:orientation="horizontal">

        <Button
            android:id="@+id/diningButton"
            android:text="@string/dining_room"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="30sp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/dining_room"
            android:onClick="launchDiningActivity" />

        <Button
            android:id="@+id/pubButton"
            android:text="@string/pub"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="30sp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/pub"
            android:onClick="launchPubActivity" />


    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/check_in"
        android:onClick="launchCheckInActivity"
        android:background="@color/lightBlue"
        />

</LinearLayout>