<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.ngflanders.android.prinfoods.DiningHoursActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="1"
        android:background="@color/lightBlue">

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:id="@+id/dateSwitch"
            android:thumb="@drawable/custom_date_switch_selector"
            android:track="@drawable/custom_date_switch_track"
            android:layout_gravity="center_horizontal"
            android:textOn="  Tomorrow  "
            android:textOff="Today"
            android:showText="true"
            android:padding="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Large Text"
            android:id="@+id/dateTextView"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>

    <LinearLayout
        android:background="@drawable/smoothie_bitmap"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/breakfast"
                android:textColor="@android:color/white"
                android:id="@+id/diningBreakfastTextView"
                android:fontFamily="sans-serif-light"
                android:textStyle="italic"
                android:textSize="30sp"
                android:layout_marginLeft="@dimen/text_left_margin"
                android:background="@drawable/text_bg"
                android:padding="5dp" />

            <TextView
                android:id="@+id/diningBreakfastTimesTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/times"
                android:textColor="@android:color/white"
                android:textSize="22sp"
                android:layout_below="@+id/diningBreakfastTextView"
                android:layout_marginLeft="@dimen/text_left_margin"
                android:background="@drawable/text_bg"
                android:padding="5dp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/BreakfastButton"
                android:background="@android:color/transparent"
                android:layout_gravity="center_horizontal"
                android:onClick="onButtonClick" />

        </RelativeLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="0.3dp"
            android:visibility="visible"
            android:background="@android:color/darker_gray" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lunch"
                android:textColor="@android:color/white"
                android:id="@+id/diningLunchTextView"
                android:fontFamily="sans-serif-light"
                android:textStyle="italic"
                android:textSize="30sp"
                android:layout_marginLeft="@dimen/text_left_margin"
                android:background="@drawable/text_bg"
                android:padding="5dp" />

            <TextView
                android:id="@+id/diningLunchTimesTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/times"
                android:textColor="@android:color/white"
                android:textSize="22sp"
                android:layout_below="@+id/diningLunchTextView"
                android:layout_marginLeft="@dimen/text_left_margin"
                android:background="@drawable/text_bg"
                android:padding="5dp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/LunchButton"
                android:background="@android:color/transparent"
                android:layout_gravity="center_horizontal"
                android:onClick="onButtonClick" />

        </RelativeLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="0.3dp"
            android:visibility="visible"
            android:background="@android:color/darker_gray" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dinner"
                android:textColor="@android:color/white"
                android:id="@+id/diningDinnerTextView"
                android:fontFamily="sans-serif-light"
                android:textStyle="italic"
                android:textSize="30sp"
                android:layout_marginLeft="@dimen/text_left_margin"
                android:background="@drawable/text_bg"
                android:padding="5dp" />

            <TextView
                android:id="@+id/diningDinnerTimesTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/times"
                android:textColor="@android:color/white"
                android:textSize="22sp"
                android:layout_below="@+id/diningDinnerTextView"
                android:layout_marginLeft="@dimen/text_left_margin"
                android:background="@drawable/text_bg"
                android:padding="5dp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/DinnerButton"
                android:background="@android:color/transparent"
                android:layout_gravity="center_horizontal"
                android:onClick="onButtonClick" />

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>
