<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.ngflanders.android.prinfoods.PubHoursActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="1"
        android:background="@color/lightBlue">

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:id="@+id/dateSwitch"
            android:thumb="@drawable/custom_date_switch_selector"
            android:track="@drawable/custom_date_switch_track"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Date"
            android:id="@+id/dateTextView"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/pub_eggs"
                android:scaleType="centerCrop" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/breakfast"
                android:fontFamily="sans-serif-light"
                android:textStyle="italic"
                android:textSize="30sp"
                android:background="@drawable/text_bg"
                android:padding="5dp"
                android:textColor="@android:color/white"
                android:id="@+id/pubBreakfastTextView"
                android:layout_marginLeft="@dimen/text_left_margin"

                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/pub_breakfast_times_textview"
                android:text="@string/couldnt_find_time"
                android:textSize="22sp"
                android:background="@drawable/text_bg"
                android:padding="5dp"
                android:gravity="center_vertical"
                android:textColor="@android:color/white"
                android:layout_below="@id/pubBreakfastTextView"
                android:layout_marginLeft="@dimen/text_left_margin" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/PubBreakfastButton"
                android:background="@android:color/transparent"
                android:layout_gravity="center_horizontal" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/pub_smoothie"
                android:scaleType="centerCrop" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lunch"
                android:fontFamily="sans-serif-light"
                android:textStyle="italic"
                android:background="@drawable/text_bg"
                android:padding="5dp"
                android:textSize="30sp"
                android:textColor="@android:color/white"
                android:id="@+id/pubLunchTextView"
                android:layout_marginLeft="@dimen/text_left_margin" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/pub_lunch_times_textview"
                android:text="@string/couldnt_find_time"
                android:textSize="22sp"
                android:gravity="center_vertical"
                android:background="@drawable/text_bg"
                android:padding="5dp"
                android:textColor="@android:color/white"
                android:layout_below="@id/pubLunchTextView"
                android:layout_marginLeft="@dimen/text_left_margin" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/PubLunchButton"
                android:background="@android:color/transparent"
                android:layout_gravity="center_horizontal" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/pub_burger"
                android:scaleType="centerCrop" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dinner"
                android:fontFamily="sans-serif-light"
                android:textStyle="italic"
                android:textSize="30sp"
                android:background="@drawable/text_bg"
                android:padding="5dp"
                android:textColor="@android:color/white"
                android:id="@+id/pubDinnerTextView"
                android:layout_marginLeft="@dimen/text_left_margin" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/pub_dinner_times_textview"
                android:text="@string/couldnt_find_time"
                android:textSize="22sp"
                android:background="@drawable/text_bg"
                android:padding="5dp"
                android:gravity="center_vertical"
                android:textColor="@android:color/white"
                android:layout_below="@id/pubDinnerTextView"
                android:layout_marginLeft="@dimen/text_left_margin" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/PubDinnerButton"
                android:background="@android:color/transparent"
                android:layout_gravity="center_horizontal" />

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>